# LenaSims

./: .gitignore  README.md  pyproject.toml
docs/: readme.md
examples/agents/: isabella.json  klaus.json  maria.json
src/multi_agent_chat/: __init__.py  agent_configurator.py  cli.py  engine.py  human_agent.py  loader.py  model_selector.py  models.py  ollama_client.py  storage.py
src/multi_agent_chat/web/: app.py
src/multi_agent_chat/web/templates/: index.html
